fix ie map overflow

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -468,6 +468,7 @@ a:hover {
       width: 100%;
       height: 200px;
       display: none;
+      overflow: hidden;
       
       #tool-ex {
         float: right;
